Fix overflow table

--- a/admin_css/bill.css
+++ b/admin_css/bill.css
@@ -157,12 +157,12 @@
   justify-content: space-between;
   align-items: center;
   padding: 20px 30px;
-  /* border: 1px solid red; */
+  height: 20vh;
 }
 
 .headerDormLogo {
-  width: 8%;
-  height: 8%;
+  width: 110px;
+  height: 96px;
 }
 
 .profile {
@@ -191,7 +191,7 @@
   gap: 15px;
   padding: 0 30px;
   width: 100%;
-  height: 9%;
+  height: 10vh;
   background-color: #f1f1f1;
 }
 
@@ -203,33 +203,38 @@
   font-size: var(--Big-font);
 }
 
+.mainContent {
+  height: 70vh;
+  overflow-y: scroll;
+}
+
 /* Css Bill*/
 .billTable {
-    width: 90%;
-    margin: 30px auto;
-    border-collapse: collapse;
-    font-size: var(--Normal-font);
-    box-shadow: rgba(0, 0, 0, 0.1) 0px 2px 8px;
-    border-radius: 8px;
-    overflow: hidden;
-  }
-  
-  .billTable thead {
-    background-color: #1e3a5f;
-    color: white;
-  }
-  
-  .billTable th, .billTable td {
-    padding: 12px 16px;
-    text-align: left;
-  }
-  
-  .billTable tbody tr:nth-child(even) {
-    background-color: #f9f9f9;
-  }
-  
-  .billTable tbody tr:hover {
-    background-color: #eef4fb;
-    transition: background-color 0.3s ease;
-  }
-  
+  width: 90%;
+  margin: 30px auto;
+  border-collapse: collapse;
+  font-size: var(--Normal-font);
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 2px 8px;
+  border-radius: 8px;
+  overflow: hidden;
+}
+
+.billTable thead {
+  background-color: #1e3a5f;
+  color: white;
+}
+
+.billTable th,
+.billTable td {
+  padding: 12px 16px;
+  text-align: left;
+}
+
+.billTable tbody tr:nth-child(even) {
+  background-color: #f9f9f9;
+}
+
+.billTable tbody tr:hover {
+  background-color: #eef4fb;
+  transition: background-color 0.3s ease;
+}
